--- a/portal-viaje/views/base.pug
+++ b/portal-viaje/views/base.pug
@@ -3,36 +3,15 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Natours | Exciting tours for adventurous people
+        title Natours | #{title}
         link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Lato:300,300i,700")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css")
         link(rel="stylesheet", href="/css/style.css")
         link(rel="shortcut icon", type="image/png", href="/img/favicon.png")
     body 
-        header.header
-            nav.nav.nav--tours 
-                a.nav__el(href="#") All tours
-            .header__logo 
-                img(src="/img/logo-white.png", alt="Natours logo")
-            nav.nav.nav--user
-                //- a.nav__el(href="#") My bookings
-                //- a.nav__el(href="#") 
-                //-     img.nav__user-img(src="/img/user.jpg", alt="User photo")
-                //-     span Jonas
-                button.nav__el Login 
-                button.nav__el.nav__el--cta Signup
+        include _header.pug
 
-        section.overview 
-            h1= tour 
+        block content
+            h1 This is a placeholder
         
-        footer.footer 
-            .footer__logo
-                img(src="/img/logo-green.png", alt="Full logo")
-            ul.footer__nav 
-                li: a(href="#") Company
-                li: a(href="#") Download apps
-                li: a(href="#") Become a guide
-                li: a(href="#") Contact
-                li: a(href="#") Careers 
-            p.footer__copyright &copy;
-                | 2019 by Natours. All rights reserved.
+        include _footer.pug
