--- a/portal-viaje/views/tour.pug
+++ b/portal-viaje/views/tour.pug
@@ -1,14 +1,21 @@
 extends base
 
 
-
-mixin overviewBox(icon, label, text)
+mixin overviewBox(label, text, icon)
   .overview-box__detail
     svg.overview-box__icon
       use(xlink:href=`/img/icons.svg#icon-${icon}`)
     span.overview-box__label= label
     span.overview-box__text= text
 
+mixin reviewCard(review)
+  .review.card
+    .review__avatar
+      img(src=`/img/users/${review.user.photo}`, alt=`${review.user.name}`, class='review__img')
+      h6.review__user= review.user.name
+    .review__text
+      p= review.review
+    .review__rating= review.rating
 
 block content
   section.section-header
@@ -18,85 +25,68 @@ block content
 
     .heading-box
       h1.heading-primary
-        span= tour.name
+        span= `${tour.name} tour`
       .heading-box__group
         .heading-box__detail
           svg.heading-box__icon
-          use(xlink:href='/img/icons.svg#icon-clock')
+            use(xlink:href='/img/icons.svg#icon-clock')
           span.heading-box__text= `${tour.duration} days`
         .heading-box__detail
           svg.heading-box__icon
-          use(xlink:href='/img/icons.svg#icon-map-pin')
-          span.heading-box__text= `${tour.startLocation.description}`
+            use(xlink:href='/img/icons.svg#icon-map-pin')
+          span.heading-box__text= tour.startLocation.description
 
   section.section-description
     .overview-box
       div
-      .overview-box__group
-        h2.heading-secondary.ma-bt-lg Quick facts
-        +overviewBox('map', 'NEXT DATE', tour.startDates[0].toLocaleString('en-us', {month: 'long', year: 'numeric'}))
-        +overviewBox('calendar', 'DIFFICULTY', tour.difficulty)
-        +overviewBox('trending-up', 'PARTICIPANTS', `${tour.maxGroupSize} people`)
-        +overviewBox('star', 'RATING', `${tour.ratingsAverage} / 5`)
+        .overview-box__group
+          h2.heading-secondary.ma-bt-lg Quick facts
 
-      .overview-box__group
-        h2.heading-secondary.ma-bt-lg Your tour guides
-        .overview-box__detail
-          img.overview-box__img(src='/img/users/user-19.jpg', alt='Lead guide')
-          span.overview-box__label Lead guide
-          span.overview-box__text Steven Miller
-        .overview-box__detail
-          img.overview-box__img(src='/img/users/user-18.jpg', alt='Tour guide')
-          span.overview-box__label Tour guide
-          span.overview-box__text Lisa Brown
-        .overview-box__detail
-          img.overview-box__img(src='/img/users/user-17.jpg', alt='Intern')
-          span.overview-box__label Intern
-          span.overview-box__text Max Smith
+          - const date = tour.startDates[0].toLocaleString('en-us', {month: 'long', year: 'numeric'})
+          +overviewBox('Next date', date, 'calendar')
+          +overviewBox('Difficulty', tour.difficulty, 'trending-up')
+          +overviewBox('Participants', `${tour.maxGroupSize} people`, 'user')
+          +overviewBox('Rating', `${tour.ratingsAverage} / 5`, 'star')
+
+        .overview-box__group
+          h2.heading-secondary.ma-bt-lg Your tour guides
+
+          each guide in tour.guides
+            .overview-box__detail
+              img.overview-box__img(src=`/img/users/${guide.photo}`, alt=`${guide.name}`)
+
+              - if (guide.role === 'lead-guide')
+                span.overview-box__label Lead guide
+              - if (guide.role === 'guide')
+                span.overview-box__label Tour guide
+              span.overview-box__text= guide.name
 
     .description-box
-      h2.heading-secondary.ma-bt-lg About the park camper tour
-      p.description__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      p.description__text Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum!
+      h2.heading-secondary.ma-bt-lg= `About ${tour.name} tour`
+      - const parapraphs = tour.description.split('\n');
+      each p in parapraphs
+        p.description__text= p
 
   section.section-pictures
-    .picture-box
-      img.picture-box__img.picture-box__img--1(src='/img/tour-5-1.jpg', alt='The Park Camper Tour 1')
-    .picture-box
-      img.picture-box__img.picture-box__img--2(src='/img/tour-5-2.jpg', alt='The Park Camper Tour 1')
-    .picture-box
-      img.picture-box__img.picture-box__img--3(src='/img/tour-5-3.jpg', alt='The Park Camper Tour 1')
+    each img, i in tour.images
+      .picture-box
+        img.picture-box__img(src=`/img/tours/${img}`, alt=`The Park Camper Tour ${i + 1}`, class=`picture-box__img--${i + 1}`)
 
   section.section-map
-    #map
+   // #map(data-locations=`${JSON.stringify(tour.locations)}`)
 
   section.section-reviews
     .reviews
-      .reviews__card
-      .reviews__avatar
-        img.reviews__avatar-img(src='/img/users/user-7.jpg', alt='Jim Brown')
-        h6.reviews__user Jim Brown
-      p.reviews__text Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque dignissimos sint quo commodi corrupti accusantium veniam saepe numquam.
-      .reviews__rating
-        svg.reviews__star.reviews__star--active
-          use(xlink:href='/img/icons.svg#icon-star')
-        svg.reviews__star.reviews__star--active
-          use(xlink:href='/img/icons.svg#icon-star')
-        svg.reviews__star.reviews__star--active
-          use(xlink:href='/img/icons.svg#icon-star')
-        svg.reviews__star.reviews__star--active
-          use(xlink:href='/img/icons.svg#icon-star')
-        svg.reviews__star.reviews__star--active
-          use(xlink:href='/img/icons.svg#icon-star')
+      each review in tour.reviews
+        +reviewCard(review)
 
   section.section-cta
     .cta
       .cta__img.cta__img--logo
         img(src='/img/logo-white.png', alt='Natours logo')
-      img.cta__img.cta__img--1(src='/img/tour-5-2.jpg', alt='')
-      img.cta__img.cta__img--2(src='/img/tour-5-1.jpg', alt='')
+      img.cta__img.cta__img--1(src=`/img/tours/${tour.images[1]}`, alt='Tour picture')
+      img.cta__img.cta__img--2(src=`/img/tours/${tour.images[2]}`, alt='Tour picture')
       .cta__content
         h2.heading-secondary What are you waiting for?
-        p.cta__text 10 days. 1 adventure. Infinite memories. Make it yours today!
+        p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
         button.btn.btn--green.span-all-rows Book tour now!
-
