--- a/portal-viaje/views/base.pug
+++ b/portal-viaje/views/base.pug
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
     head
+     block head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Natours | #{title}
@@ -15,3 +16,5 @@ html(lang="en")
             h1 This is a placeholder
         
         include _footer.pug
+
+        script(src="/js/mapbox.js")
