--- a/portal-viaje/views/tour.pug
+++ b/portal-viaje/views/tour.pug
@@ -1,5 +1,8 @@
 extends base
+include _reviewCard
 
+//- block append head
+  //script(src="./js/mapbox.js") 
 
 mixin overviewBox(label, text, icon)
   .overview-box__detail
@@ -8,14 +11,6 @@ mixin overviewBox(label, text, icon)
     span.overview-box__label= label
     span.overview-box__text= text
 
-mixin reviewCard(review)
-  .review.card
-    .review__avatar
-      img(src=`/img/users/${review.user.photo}`, alt=`${review.user.name}`, class='review__img')
-      h6.review__user= review.user.name
-    .review__text
-      p= review.review
-    .review__rating= review.rating
 
 block content
   section.section-header
@@ -73,7 +68,7 @@ block content
         img.picture-box__img(src=`/img/tours/${img}`, alt=`The Park Camper Tour ${i + 1}`, class=`picture-box__img--${i + 1}`)
 
   section.section-map
-   // #map(data-locations=`${JSON.stringify(tour.locations)}`)
+    #map(data-locations=`${JSON.stringify(tour.locations)}`)
 
   section.section-reviews
     .reviews
@@ -90,3 +85,5 @@ block content
         h2.heading-secondary What are you waiting for?
         p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
         button.btn.btn--green.span-all-rows Book tour now!
+
+      script(src="./js/mapbox.js")
